rs/type-registry/tests/ui/invalid_annotation.stderr
error: expected string literal
 --> tests/ui/invalid_annotation.rs:4:12
  |
4 | #[annotate(id = 42)] // Integer values are not supported
  |            ^^^^^^^
